pull initial enabled state for menu items from command node, not their own DOM node. fixes keyboard command crashes. b=332949 r=mento sr=pinkerton